# humotion

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: humotion.cfg
examples/demo_korg_slider/: CMakeLists.txt  korg_input.cpp  korg_input.h  main.cpp
examples/meka/: CMakeLists.txt  package.xml
examples/meka/include/: mekajointinterface.h
examples/meka/src/: main.cpp  mekajointinterface.cpp
examples/yarp_icub/: CMakeLists.txt  package.xml
examples/yarp_icub/include/humotion_yarp_icub/: icub_data_receiver.h  icub_faceinterface.h  icub_jointinterface.h
examples/yarp_icub/src/: icub_data_receiver.cpp  icub_faceinterface.cpp  icub_jointinterface.cpp  main.cpp
include/humotion/: gaze_state.h  mouth_state.h  timestamp.h  timestamped_float.h  timestamped_list.h
include/humotion/client/: client.h  middleware.h  middleware_ros.h  middleware_rsb.h
include/humotion/server/: config.h  controller.h  eye_motion_generator.h  eyebrow_motion_generator.h  eyelid_motion_generator.h  gaze_motion_generator.h  joint_interface.h  middleware.h  middleware_ros.h  middleware_rsb.h  motion_generator.h  mouth_motion_generator.h  neck_motion_generator.h  reflexxes_motion_generator.h  server.h
msg/: gaze.msg  mouth.msg  state.msg
src/: gaze_state.cpp  mouth_state.cpp  timestamp.cpp  timestamped_list.cpp
src/client/: client.cpp  middleware.cpp  middleware_ros.cpp  middleware_rsb.cpp
src/server/: config.cpp  controller.cpp  eye_motion_generator.cpp  eyebrow_motion_generator.cpp  eyelid_motion_generator.cpp  gaze_motion_generator.cpp  joint_interface.cpp  middleware.cpp  middleware_ros.cpp  middleware_rsb.cpp  motion_generator.cpp  mouth_motion_generator.cpp  neck_motion_generator.cpp  reflexxes_motion_generator.cpp  server.cpp
stylecheck/: CpplintWrapper.cmake  cpplint.py
test/: client.cpp  server.cpp  timestamp.cpp
